serialize prices to parquet files

--- a/notebooks/plot_prices.py.ipynb
+++ b/notebooks/plot_prices.py.ipynb
@@ -46,6 +46,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "80d8cf0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PoolState(time=1643981162, asset1_reserves=63588615887407, asset2_reserves=1893641031286)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(ps.query_pool_state_history(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "b2315995",
    "metadata": {},
