--- a/notebooks/plot_prices.ipynb
+++ b/notebooks/plot_prices.ipynb
@@ -8,18 +8,11 @@
    "outputs": [],
    "source": [
     "import datetime\n",
-    "\n",
-    "from definitions import ROOT_DIR\n",
-    "from tinyman.v1.client import TinymanMainnetClient\n",
-    "from algo.blockchain.process_volumes import query_transactions, SwapScraper\n",
-    "from algo.blockchain.process_prices import PriceScraper\n",
-    "from algo.blockchain.utils import datetime_to_int, generator_to_df\n",
     "import json\n",
     "import itertools\n",
     "import pandas as pd\n",
     "import pyarrow as pa\n",
     "import pyarrow.parquet as pq\n",
-    "from definitions import ROOT_DIR\n",
     "import numpy as np\n",
     "import glob\n",
     "import os\n",
@@ -36,19 +29,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e519a366",
+   "id": "2d3329fd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cache_name = '20220206'\n",
-    "\n",
-    "# Select only pairs with Algo\n",
-    "caches_pattern = f'{ROOT_DIR}/caches/prices/{cache_name}/0_*'\n",
-    "\n",
-    "stablecoins = [31566704, # USDC\n",
-    "               312769 # USDt\n",
-    "              ]\n",
-    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94467e6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "@lru_cache()\n",
     "def get_asset_name(asset_id):\n",
     "    return get_asset_data(asset_id)['params']['name']\n",
@@ -57,47 +52,141 @@
     "def get_decimals(asset_id):\n",
     "    return get_asset_data(asset_id)['params']['decimals']\n",
     "\n",
-    "def gen_data():\n",
-    "    for base_dir in glob.glob(caches_pattern):\n",
-    "        asset_id = int(Path(base_dir).name.split('_')[1])\n",
-    "        if asset_id in stablecoins:\n",
-    "            continue\n",
-    "        subdf = pd.concat(pd.read_parquet(fname) for fname in glob.glob(f'{base_dir}/*.parquet')).sort_values(by='time')\n",
-    "        subdf['id'] = asset_id\n",
-    "        yield subdf\n",
-    "    \n",
-    "df = pd.concat(gen_data())\n",
     "\n",
-    "df['time_5min'] = timestamp_to_5min(df['time'])\n",
-    "df = df.groupby(['time_5min','id']).agg(sum)\n",
-    "df['price'] = df['asset2_reserves']/df['asset1_reserves']\n",
-    "df = df.reset_index()"
+    "def load_from_cache(pattern, filter_pair):\n",
+    "\n",
+    "    def gen_data():\n",
+    "        for base_dir in glob.glob(pattern):\n",
+    "            a0,a1 = tuple(int(x) for x in Path(base_dir).name.split('_'))\n",
+    "            \n",
+    "            if filter_pair(a0,a1):\n",
+    "                subdf = pd.concat(pd.read_parquet(fname) for fname in glob.glob(f'{base_dir}/*.parquet')).sort_values(by='time')\n",
+    "                subdf['asset1'] = a0\n",
+    "                subdf['asset2'] = a1\n",
+    "                yield subdf\n",
+    "\n",
+    "    df = pd.concat(gen_data())\n",
+    "    df['time_5min'] = timestamp_to_5min(df['time'])\n",
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84603693",
+   "id": "e519a366",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cache_name = '20220206'\n",
+    "# Select only pairs with Algo\n",
+    "pattern = f'{ROOT_DIR}/caches/prices/{cache_name}/0_*'\n",
+    "\n",
+    "def filter_pair(a1, a2):\n",
+    "    exclude = [31566704, # USDC\n",
+    "               312769, # USDt\n",
+    "                567485181, # LoudDefi \n",
+    "                  ]\n",
+    "    if a1 in exclude or a2 in exclude:\n",
+    "        return False\n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "dfp_raw = load_from_cache(pattern, filter_pair)\n",
+    "dfp = dfp_raw.groupby(['time_5min','asset1','asset2']).agg('mean').reset_index()\n",
+    "dfp.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a7486ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cache_name = '20220206'\n",
+    "# Select only pairs with Algo\n",
+    "pattern = f'{ROOT_DIR}/caches/volumes/{cache_name}/0_*'\n",
+    "\n",
+    "def filter_pair(a1, a2):\n",
+    "    stablecoins = [31566704, # USDC\n",
+    "                   312769 # USDt\n",
+    "                  ]\n",
+    "    if a1 in stablecoins or a2 in stablecoins:\n",
+    "        return False\n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "dfv_raw = load_from_cache(pattern, filter_pair)\n",
+    "dfv_raw['algo_volume'] = abs(dfv_raw['asset1_amount'])\n",
+    "dfv = dfv_raw.groupby(['time_5min','asset1','asset2']).agg('sum').reset_index()\n",
+    "dfv.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85cba44b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def price_norm(subdf, asset_id):\n",
+    "    decimals = get_decimals(asset_id)\n",
+    "    subdf['price_norm'] = subdf['price'] * 10**(decimals-6)\n",
+    "    return subdf\n",
+    "\n",
+    "def cumulative_volume(subdf):\n",
+    "    subdf['algo_volume_cumul'] = subdf['algo_volume'].cumsum() / (10**6)\n",
+    "    return subdf\n",
+    "\n",
+    "def cumulative_net_volume(subdf):\n",
+    "    subdf['net_algo_volume_cumul'] = subdf['asset1_amount'].cumsum() / (10**6)\n",
+    "    return subdf\n",
+    "\n",
+    "keys = ['time_5min','asset1','asset2']\n",
+    "df = dfp.merge(dfv, how='left', on=keys)\n",
+    "\n",
+    "df['price'] = df['asset2_reserves']/df['asset1_reserves']\n",
+    "df = df.groupby('asset2').apply(lambda x: price_norm(x,x.name))\n",
+    "df = df.groupby('asset2').apply(cumulative_volume)\n",
+    "df = df.groupby('asset2').apply(cumulative_net_volume)\n",
+    "df['reserves_algo'] = df['asset2_reserves'] / (10**6)\n",
+    "df['net_algo_volume'] = df['asset1_amount'] / (10**6)\n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b3fde0c",
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "keyname = 'id'\n",
+    "keyname = 'asset2'\n",
+    "\n",
     "keys = list(df[keyname].unique())\n",
     "\n",
-    "f,axs = plt.subplots(len(keys),1,figsize=(10,40), sharex='col')\n",
+    "cols = ('price_norm', 'reserves_algo', 'algo_volume_cumul')#, 'net_algo_volume_cum')\n",
     "\n",
-    "for (asset_id,group),ax in zip(df.groupby(['id']), axs):\n",
+    "nrows = len(cols)\n",
+    "ncols = len(keys)\n",
+    "f,axss = plt.subplots(nrows, ncols, figsize=(8*ncols,4*nrows), sharex='col')\n",
+    "\n",
+    "for j,(asset_id,group) in enumerate(df.groupby([keyname])):\n",
     "    asset_name = get_asset_name(asset_id)\n",
-    "    decimals = get_decimals(asset_id)\n",
     "\n",
-    "    ax.plot(group['time_5min'], group['price'] * 10**(decimals-6), label=asset_id);\n",
-    "    ax.set_title(asset_name);\n",
-    "    ax.legend();\n",
-    "    ax.grid();\n",
-    "    \n",
-    "plt.xticks(rotation=35);"
+    "\n",
+    "    for i,col in enumerate(cols):\n",
+    "        ax = axss[i][j]\n",
+    "        ax.plot(group['time_5min'], group[col], label=col);\n",
+    "        ax.set_title(f'{asset_name}, {asset_id}');\n",
+    "        ax.legend();\n",
+    "        ax.grid();\n",
+    "\n",
+    "plt.xticks(rotation=35);\n",
+    "plt.savefig('test.pdf')"
    ]
   }
  ],
